[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
column_limit = 100

[project]
name = "matanyone"
version = "1.0.0"
authors = [{ name = "Peiqing Yang", email = "peiqingyang99@outlook.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  'numpy >= 1.21',
  'Pillow >= 9.5',
  'opencv-python >= 4.8',
  'scipy >= 1.7',
  'tqdm >= 4.66.1',
  'einops >= 0.6',
  'easydict',
  'huggingface_hub',
  'safetensors',
]

[tool.hatch.build.targets.wheel]
packages = ["matanyone"]

[project.urls]
"Homepage" = "https://github.com/pq-yang/MatAnyone"
"Bug Tracker" = "https://github.com/pq-yang/MatAnyone/issues"

[tool.setuptools]
package-dir = {"" = "."}
